<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/Azul">
    <TextView
            android:text="@string/tituloMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginStart="8dp"
            android:textSize="40sp" android:textColor="@color/Laranja"
            app:layout_constraintVertical_bias="0.046"/>
    <TextView
            android:text="@string/introMA"
            android:layout_width="406dp"
            android:layout_height="203dp"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.315" android:textSize="24sp" android:textColor="@color/Branco"
            app:layout_constraintEnd_toEndOf="@+id/textView5"/>
    <TextView
            android:text="@string/subtituloMA"
            android:layout_width="387dp"
            android:layout_height="65dp"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.13" android:textSize="40sp" android:textColor="@color/Amarelo"
            app:layout_constraintStart_toStartOf="@+id/textView4"/>
    <TextView
            android:text="@string/posAreas"
            android:layout_width="258dp"
            android:layout_height="27dp"
            android:id="@+id/txtInscricao" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.543" android:textSize="18sp" android:textColor="@color/Laranja"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView16"/>
    <TextView
            android:text="@string/gastronomia"
            android:layout_width="154dp"
            android:layout_height="26dp"
            android:id="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.693" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView12"/>
    <TextView
            android:text="@string/gestao"
            android:layout_width="90dp"
            android:layout_height="27dp"
            android:id="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.732" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView11"/>
    <TextView
            android:text="@string/TI"
            android:layout_width="367dp"
            android:layout_height="26dp"
            android:id="@+id/textView13" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintVertical_bias="0.886" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/comunicação"
            android:layout_width="175dp"
            android:layout_height="23dp"
            android:id="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.614" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView10"/>
    <TextView
            android:text="@string/educacao"
            android:layout_width="141dp"
            android:layout_height="24dp"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.657" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"/>
    <TextView
            android:text="@string/Mambiente"
            android:layout_width="157dp"
            android:layout_height="25dp"
            android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.769" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView14"/>
    <TextView
            android:text="@string/ProAlimetos"
            android:layout_width="242dp"
            android:layout_height="25dp"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.811" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold" app:layout_constraintStart_toStartOf="@+id/textView15"/>
    <TextView
            android:text="@string/saude"
            android:layout_width="90dp"
            android:layout_height="27dp"
            android:id="@+id/textView15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.85" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView13"/>
    <TextView
            android:text="@string/artes"
            android:layout_width="90dp"
            android:layout_height="27dp"
            android:id="@+id/textView16" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.582" android:textSize="18sp" android:textColor="@color/Branco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"/>
    <TextView
            android:text="@string/SouMA"
            android:layout_width="136dp"
            android:layout_height="31dp"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintVertical_bias="0.488" android:textSize="18sp" android:textColor="@color/Laranja"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/inscreva"
            android:layout_width="123dp"
            android:layout_height="17dp"
            android:id="@+id/textView18" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintVertical_bias="0.951" android:textSize="14sp" android:textColor="@color/Branco"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/MEC"
            android:layout_width="316dp"
            android:layout_height="27dp"
            android:id="@+id/textView17" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintVertical_bias="0.925" android:textSize="14sp" android:textColor="@color/Roxo"
            android:textStyle="bold"/>
    <ImageView
            android:layout_width="53dp"
            android:layout_height="49dp" app:srcCompat="@drawable/facebooklogo"
            tools:layout_editor_absoluteY="689dp" tools:layout_editor_absoluteX="12dp" android:id="@+id/imageView"/>
    <ImageView
            android:layout_width="43dp"
            android:layout_height="34dp" app:srcCompat="@drawable/instragramlogo"
            tools:layout_editor_absoluteY="699dp" tools:layout_editor_absoluteX="188dp" android:id="@+id/imageView2"/>
</android.support.constraint.ConstraintLayout>