<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/Azul">
    <ImageView
            android:layout_width="2026dp"
            android:layout_height="975dp" app:srcCompat="@drawable/start"
            android:id="@+id/imagsplash" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.253" android:contentDescription="@string/imgsplash"
    />
    <TextView
            android:text="@string/conhecimento"
            android:layout_width="253dp"
            android:layout_height="79dp"
            android:id="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="@string/conhecimento" android:textSize="36sp" android:textColor="@color/Amarelo"
            app:layout_constraintVertical_bias="0.08" app:layout_constraintHorizontal_bias="0.429"/>
    <TextView
            android:text="@string/ritmo"
            android:layout_width="272dp"
            android:layout_height="59dp"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.21" android:textSize="36sp" android:textColor="@color/Azul"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.596" android:indeterminateDuration="1000"/>
    <ImageView
            android:layout_width="196dp"
            android:layout_height="110dp" app:srcCompat="@drawable/senac"
            android:id="@+id/imageView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/senac"/>
</android.support.constraint.ConstraintLayout>